--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
   :root {
     --primary: #ffffff;
     --secondary: #f4f4f4;
-    --third: #262626;
+    --third: #1a1515;
     --black: #161616;
   }
 
@@ -21,21 +21,981 @@
 @layer base {
   html {
     @apply font-medium;
-    font-family: Neue Montreal;
-  }
-
-  body {
-    @apply overflow-x-hidden;
-  }
-
-  .card-size {
-    @apply h-[308px] rounded-xl sm:h-[496px];
-  }
-  .card-mobile-text {
-    @apply text-2xl text-black md:hidden
   }
 }
 
-::-webkit-scrollbar {
-  width: 0px;
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: initial;
+}
+
+button {
+  font: inherit;
+  border: initial;
+  outline: initial; 
+  background-color: initial;
+}
+
+input {
+  border: initial;
+  outline: initial; 
+  font: inherit;
+}
+
+.u-bold {
+  font-weight: 700;
+}
+
+@keyframes spinner {
+  0% {
+    transform: translateX(-50%) rotate(0deg);
+  }
+
+  100% {
+    transform: translateX(-50%) rotate(360deg);
+  }
+}
+
+@keyframes intro {
+  0% {
+    opacity: 0;
+    transform: translateY(-10px) scale(0.95);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translateY(0px) scale(1);
+  }
+}
+
+body {
+  color: rgb(22, 24, 28);
+  min-height: 100vh;
+  position: relative;
+  scrollbar-width: none; 
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+.first-heading {
+  font-size: 31px;
+  font-weight: 400;
+  color: #fff;
+
+  font-size: 27px;
+  display: none;
+}
+
+.second-heading {
+  font-size: 23px;
+  color: #fff;
+  font-weight: 500;
+}
+
+.third-heading {
+  font-size: 15px;
+  font-weight: 500;
+  margin-top: 4px;
+}
+
+.fourth-heading {
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.background {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: -2;
+  overflow: hidden;
+  background-color: #161616;
+  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+}
+
+.background::before {
+  content: "";
+  background-image: linear-gradient(
+    -180deg,
+    rgba(0, 0, 0, 0.025) 0,
+    rgba(0, 0, 0, 0.075) 99%
+  );
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+}
+
+.background > img {
+  position: absolute;
+  top: -25px;
+  left: 0;
+  z-index: -1;
+  user-select: none;
+
+  transform: scale(1.1);
+}
+
+.space {
+  padding-top: 12px;
+  padding-top: 40px;
+}
+
+.logo {
+  margin-left: -8px;
+  user-select: none;
+}
+
+.logo__img {
+  margin-bottom: -5px;
+}
+
+.bookmarks-btn {
+  text-transform: lowercase;
+  font-size: 13px;
+  color: rgba(255, 255, 255, 0.75);
+  position: relative;
+  cursor: pointer;
+  transition: all 0.2s;
+  height: 20px;
+  display: flex;
+  align-items: center;
+}
+
+
+.bookmarks-btn--active,
+.bookmarks-btn:hover,
+.bookmarks-btn:focus {
+  color: rgba(255, 255, 255, 1);
+}
+
+.bookmarks-btn--active .bookmarks-btn__icon,
+.bookmarks-btn:hover .bookmarks-btn__icon,
+.bookmarks-btn:focus .bookmarks-btn__icon {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.bookmarks-btn__icon {
+  font-size: 10px;
+  transform: translateY(-1px);
+  color: rgba(255, 255, 255, 0.6);
+  transition: all 0.2s;
+}
+
+.job-list {
+  background-color: #2c2828;
+  position: relative;
+  min-height: 140px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+
+  scrollbar-color: #cacdd0; 
+  scrollbar-width: thin; 
+}
+
+.job-list::-webkit-scrollbar {
+  width: 4px;
+}
+
+.job-list::-webkit-scrollbar-track {
+  background-color: #2c2828;
+}
+
+.job-list::-webkit-scrollbar-thumb {
+  background-color: #cacdd0;
+  transition: all 0.2s;
+}
+
+.job-list::-webkit-scrollbar-thumb:hover {
+  background-color: #b1b4b8;
+}
+
+.job-list--search {
+  flex: 1;
+}
+
+.bookmarks-popover {
+  color:#000;
+  background-color: #2c2828;
+  min-height: 76px;
+  min-width: 340px;
+  width: 340px;
+  border-radius: 4px;
+  overflow: hidden;
+  z-index: 10;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.15);
+  transform: translateX(-50%);
+  transform-origin: left;
+  transition: all 0.2s;
+
+  position: fixed;
+  left: 80%;
+  top: 120px;
+}
+
+.job-list--bookmarks {
+  min-height: 76px;
+  min-width: 340px;
+  width: 340px;
+  border-radius: 4px;
+  overflow: hidden;
+  z-index: 10;
+  box-shadow: 0 5px 8px rgba(0, 0, 0, 0.15);
+  transform: translateX(-50%);
+  transform-origin: left;
+  transition: all 0.2s;
+  position: fixed;
+  left: 50%;
+  top: 82px;
+}
+
+.job-list--bookmarks > p {
+  font-size: 14px;
+  position: absolute;
+  top: 46%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.job-list--bookmarks:hover {
+  pointer-events: initial;
+  visibility: initial;
+  transform: scale(1) translateX(-50%);
+  opacity: 1;
+}
+
+.job-list--visible {
+  pointer-events: initial;
+  visibility: initial;
+  transform: scale(1) translateX(-50%);
+  opacity: 1;
+}
+
+.job-item {
+  cursor: pointer;
+  transition: background-color 0.2s;
+  background-color: #2c2828;
+  height: 76px;
+  color:#f4f5f7;
+}
+
+.job-item:not(:nth-child(7)) {
+  border-bottom: 1px solid #413c3c;
+}
+
+.job-item:hover,
+.job-item--active {
+  background-color: #1a1515;
+}
+
+
+.job-item__link {
+  height: 100%;
+  width: 100%;
+  padding: 14px 20px;
+  display: flex;
+}
+
+.job-item__badge {
+  font-size: 13px;
+  height: 46px;
+  width: 46px;
+  background-color: #dee3e9;
+  color: #1a1515;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  margin-right: 13px;
+}
+
+.job-item__company {
+  font-size: 13px;
+  font-style: italic;
+}
+
+.job-item__extras {
+  display: grid;
+  grid-template-columns: 65px 72px 65px;
+  column-gap: 10px;
+}
+
+.job-item__extra {
+  color:rgb(184, 190, 197);
+  font-size: 11px;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+}
+
+.job-item__extra-icon {
+  color: #bec5ce;
+  font-size: 10px;
+  margin-right: 1px;
+}
+
+.job-item__right {
+  margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transform: translateX(2px) translateY(0px);
+}
+
+.job-item__right svg {
+  font-size: 14px;
+
+  cursor: pointer;
+  color: #d7dbe0;
+  transition: all 0.2s;
+}
+
+.job-item__right svg.filled {
+  color: #2671dd;
+}
+
+.job-item__bookmark-icon--bookmarked {
+  color: #2671dd;
+}
+
+.job-item__time {
+  font-size: 11px;
+  margin-top: 5px;
+  color: #515459;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+.intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 33px;
+
+  margin-top: 20px;
+  row-gap: 20px;
+}
+
+.search {
+  position: relative;
+  animation: intro 0.3s 0.1s backwards;
+  margin: 0 auto;
+  width: 610px;
+  margin-top: 20px;
+}
+
+.search > button {
+  cursor: pointer;
+  position: absolute;
+  top: 17px;
+  left: 25px;
+}
+
+.search > button > i {
+  transition: all 0.2s;
+  color: rgba(0, 0, 0, 0.73);
+}
+
+.search__icon:hover,
+.search__icon:focus {
+  color: rgba(0, 0, 0, 0.93);
+}
+
+.search input {
+  height: 56px;
+  width: 100%;
+  border-radius: 4px;
+  padding-left: 55px;
+  padding-right: 15px;
+  padding-bottom: 2px;
+  color: rgba(0, 0, 0, 0.9);
+  caret-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 0.9);
+  transition: all 0.2s, box-shadow 0.1s;
+}
+
+.search input::selection {
+  background-color: rgba(0, 0, 0, 0.25);
+}
+
+.search input:hover,
+.search input:focus {
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.search input:focus {
+  box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.4);
+}
+
+.search input::placeholder {
+  color: rgba(0, 0, 0, 0.7);
+  font-weight: 500;
+  font-size: 15px;
+}
+
+.search__input--invalid {
+  box-shadow: 0 0 0 4px rgba(47, 19, 19, 0.729);
+}
+
+.container {
+  margin: 0 12px;
+  margin-top: 27px;
+  margin-left: auto;
+  margin-right: auto;
+  height: 616px;
+  width: 976px;
+  background-color: #2c2828;
+  border-radius: 8px;
+  display: flex;
+  border-top-right-radius: 9px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.07);
+  margin-top: 40px;
+  animation: intro 0.3s 0.2s backwards;
+}
+
+.sidebar {
+  width: 340px;
+  display: flex;
+  flex-direction: column;
+}
+
+.search-results {
+  width: 340px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  cursor: default;
+}
+
+.sidebar__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+
+.count {
+  font-size: 12px;
+  color: #e6ebee;
+}
+
+.sorting {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.sorting > i {
+  font-size: 11px;
+  color: #4c4f50;
+  margin-right: 5px;
+}
+
+.sorting__button {
+  font-size: 10px;
+  text-transform: uppercase;
+  background-color: #e8edf0;
+  padding: 6px 8px;
+  border-radius: 30px;
+  margin-left: 2px;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.sorting__button:hover,
+.sorting__button:focus {
+  background-color: #d0d5d8;
+}
+
+.sorting__button--active,
+.sorting__button--active:hover,
+.sorting__button--active:focus {
+  color: #fff;
+  background-color: #1a1515;
+}
+
+
+.pagination {
+  height: 40px;
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px 1px;
+}
+
+.pagination__button {
+  font-size: 10px;
+  padding: 4px 10px;
+  border-radius: 500px;
+  color:rgb(227, 230, 233);
+  background-color: #1a1515;
+  cursor: pointer;
+  transition: all 0.2s, visibility 0s;
+  gap: 2px;
+  display: flex;
+  align-items: center;
+}
+
+.pagination__button svg {
+  width: 10px;
+  transform: translateY(1px);
+}
+
+.pagination__button:hover,
+.pagination__button:focus {
+  background-color: #1a1515;
+}
+
+.pagination__button--hidden {
+  visibility: hidden;
+}
+
+.pagination__button--next {
+  margin-left: auto;
+}
+
+.pagination__button--back .pagination__icon {
+  margin-right: 3px;
+}
+
+.pagination__button--next .pagination__icon {
+  margin-left: 3px;
+}
+
+.pagination__button > span {
+  font-weight: 500;
+}
+.pagination__icon {
+  font-size: 8px;
+  color: #9fa6b0;
+}
+
+.job-details {
+  flex: 1;
+  background-color: #1a1515;
+  position: relative;
+  border-top-right-radius: 12px;
+  border-bottom-right-radius: 8px;
+}
+
+.job-details__start-view {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.job-details__start-view > p:first-child {
+  opacity: 0.55;
+  width: 275px;
+  text-align: center;
+  color: #f4f4f4;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.job-details__start-view > p:nth-child(2) {
+  opacity: 0.55;
+  color: #24292d;
+  font-size: 14px;
+  width: 275px;
+  text-align: center;
+}
+
+.job-details > div {
+  height: 100%;
+}
+
+.job-details > div > img {
+  width: 100%;
+  height: 150px;
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  object-fit: cover;
+  border-top-right-radius: 8px;
+  user-select: none;
+}
+
+.job-details__other {
+}
+
+.job-details__footer {
+  margin-left: 42px;
+  margin-right: 42px;
+  margin-top: 33px;
+  padding-top: 13px;
+  border-top: 1px solid #dce2e8;
+}
+
+.job-details__footer-text {
+  color: #858b8f;
+  font-size: 10px;
+}
+
+.apply-btn {
+  position: absolute;
+  background-color: #1a1515;
+  z-index: 2;
+  color: rgba(255, 255, 255, 0.92);
+  font-size: 11px;
+  padding: 5px 10px 6px;
+  border-radius: 30px;
+  top: 12px;
+  right: 12px;
+  cursor: pointer;
+  text-transform: uppercase;
+  transition: all 0.2s;
+  display: flex;
+  align-items: center;
+}
+
+.apply-btn:hover,
+.apply-btn:focus {
+  background-color: #1d60bd;
+  color: rgba(255, 255, 255, 1);
+}
+
+.apply-btn__icon {
+  color: rgba(255, 255, 255, 0.65);
+  font-size: 8px;
+  margin-left: 4px;
+  margin-top: -1px;
+}
+
+.job-info {
+  position: relative;
+  z-index: 1;
+  margin-bottom: 40px;
+  display: flex;
+  column-gap: 16px;
+  padding-top: 120px;
+}
+
+.job-info::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 150px;
+  top: 0;
+  left: 0;
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.7),
+    rgba(0, 0, 0, 0.15)
+  );
+  z-index: -1;
+  border-top-right-radius: 8px;
+}
+
+.job-info__left {
+  padding-left: 42px;
+}
+
+.job-info__right {
+  padding-right: 42px;
+}
+
+.job-info__badge {
+  width: 70px;
+  height: 70px;
+  background-color: #1a1515;
+  color: #f4f4f4;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 13px;
+}
+
+.job-info__below-badge {
+  display: flex;
+  justify-content: space-between;
+}
+
+.job-info__time {
+  font-size: 12px;
+  transform: translateY(1px);
+  color: #494d4f;
+}
+
+.bookmark-btn {
+  cursor: pointer;
+}
+
+.bookmark-btn:hover svg {
+  color: #2671dd;
+}
+
+.bookmark-btn svg {
+  color: #d7dbe0;
+  transition: all 0.2s;
+  font-size: 18px;
+}
+
+.bookmark-btn .filled {
+  color: #2671dd;
+}
+
+.job-info__company {
+  font-size: 14px;
+  font-style: italic;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.job-info__description {
+  font-size: 14px;
+  margin-top: 18px;
+  margin-bottom: 12px;
+  line-height: 1.4;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.job-info__extras {
+  display: flex;
+  column-gap: 35px;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.job-info__extra {
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.job-info__extra-icon {
+  height: 23px;
+  width: 23px;
+  border-radius: 50%;
+  background-color:rgb(35, 37, 39);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 9px;
+  margin-right: 8px;
+  color: #a1a8b0;
+}
+
+.qualifications {
+  display: flex;
+  padding-left: 42px;
+  padding-right: 42px;
+  margin-bottom: 30px;
+  color: #a1a8b0;
+}
+
+.qualifications__sub-text {
+  font-size: 13px;
+  width: 157px;
+  margin-top: 3px;
+}
+
+.qualifications__left {
+  margin-right: 35px;
+}
+
+.qualifications__list {
+  display: flex;
+  align-items: start;
+  flex-wrap: wrap;
+  gap: 6px;
+}
+
+.qualifications__item {
+  font-size: 13px;
+  background-color: #e6ebee;
+  border-radius: 2px;
+  padding: 6px 10px;
+  color: #494d4f;
+}
+
+.reviews {
+  display: flex;
+  padding-left: 42px;
+  padding-right: 42px;
+  color: #a1a8b0;
+}
+
+.reviews__sub-text {
+  font-size: 13px;
+  width: 157px;
+  margin-top: 3px;
+}
+
+.reviews__left {
+  margin-right: 35px;
+}
+
+.reviews__list {
+  flex: 1;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  column-gap: 20px;
+  row-gap: 20px;
+}
+
+.reviews__item {
+  font-size: 13px;
+  font-style: italic;
+  color: #494d4f;
+  position: relative;
+  transform-style: preserve-3d;
+}
+
+
+
+.spinner {
+  position: absolute;
+  border-radius: 50%;
+  animation: spinner 1s infinite linear;
+  left: 50%;
+  top: 18%;
+  width: 85px;
+  height: 85px;
+  border-top: 5px solid #e2e7e9;
+  border-right: 5px solid #e2e7e9;
+  border-bottom: 5px solid #e2e7e9;
+  border-left: 5px solid #ccd1d3;
+}
+
+.spinner--search {
+}
+
+.spinner--job-details {
+  left: 50%;
+  top: 40%;
+  width: 105px;
+  height: 105px;
+  border-top: 6px solid #d5d9db;
+  border-right: 6px solid #d5d9db;
+  border-bottom: 6px solid #d5d9db;
+  border-left: 6px solid #bbc0c2;
+}
+
+.spinner--visible {
+  visibility: visible;
+}
+
+
+@media (max-height: 925px) and (min-width: 1010px) {
+  .body {
+    padding-bottom: 50px;
+  }
+}
+
+@media (max-width: 1179px) {
+  .job-list--bookmarks {
+    right: 0;
+  }
+}
+
+@media (max-width: 1009px) {
+  .body {
+    padding: 0 12px;
+    padding-bottom: 50px;
+  }
+
+  .container {
+    flex-direction: column;
+    height: initial;
+    width: 100%;
+    max-width: 800px;
+    border-radius: 8px;
+    overflow: hidden;
+  }
+
+  .search-results {
+    width: 100%;
+  }
+
+  .job-details {
+    display: none;
+  }
+
+  .footer {
+    max-width: 800px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
+@media (max-width: 660px) {
+  .intro {
+    width: 100%;
+  }
+
+  .search {
+    width: 100%;
+  }
+
+  .search__input {
+    width: 100%;
+  }
+
+  .intro {
+    row-gap: 25px;
+  }
+
+  .first-heading {
+    text-align: center;
+    max-width: 400px;
+  }
+}
+
+@media (max-width: 370px) {
+  .job-list--bookmarks {
+    width: 93vw;
+    min-width: initial;
+  }
+
+  .job-item {
+    width: 100%;
+  }
+
+  .job-item__badge {
+    display: none;
+  }
+
+  .error {
+    width: 93vw;
+    right: initial;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+
